--- a/src/rankItem.css
+++ b/src/rankItem.css
@@ -1,5 +1,6 @@
 .rank-item {
-    background-color: #D6D6D6;
+    /* background-color: #D6D6D6; */
+    background-color: white;
     border-radius: 10px;
     width: 900px;
     height: 100px;
